# COMPOSER

./: .gitignore  ASSUMPTIONS.md  IMPLEMENTATION_LOG.md  PAPER_MAPPING.md  README.md  pyproject.toml
.venv-closure-312/: pyvenv.cfg
.venv-qiskit-312/: pyvenv.cfg
composer/: __init__.py
data/: build_h2_integrals.py  h2_sto3g_integrals.npz
examples/: 04_lcu_hamiltonian_h2.py  05_similarity_sandwich.py  06_qiskit_export_h2.py
src/composer/: __init__.py
src/composer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/composer/block_encoding/: __init__.py  bilinear.py  cholesky_channel.py  generator_exp.py  lcu.py  similarity_sandwich.py
src/composer/circuits/: __init__.py  circuit.py  export.py  gate.py  resources.py  simulator.py
src/composer/diagnostics/: __init__.py  mask_selection.py  mp2.py  subspace.py
src/composer/factorization/: __init__.py  cholesky.py  mean_field_shift.py  pair_svd.py
src/composer/ladders/: __init__.py  givens.py  one_electron.py  phased_pair_givens.py  two_electron.py
src/composer/operators/: __init__.py  generator.py  hamiltonian.py  mask.py  rank_one.py
src/composer/qsp/: __init__.py  chebyshev.py  phases.py  qsvt_poly.py
src/composer/utils/: __init__.py  antisymmetric.py  fermion.py  linalg.py
tests/: test_bilinear_be.py  test_cholesky.py  test_cholesky_channel_be.py  test_end_to_end_h2.py  test_foundation.py  test_generator_exp.py  test_lcu.py  test_mp2_wauc.py  test_one_electron_ladder.py  test_qiskit_export.py  test_qsp.py  test_rank_one.py  test_similarity_sandwich.py  test_two_electron_ladder.py
(+2 files in other folders)
