[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composer"
version = "0.1.0"
description = "COMPOSER: Compile-Once Modular Parametric Oracle for Similarity-Encoded Effective Reduction (reference implementation)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "COMPOSER reference implementation"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
